<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_app_id">680388332060479</string>
    <string name="app_name">Butterfly</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_auth">Sign in</string>
    <string name="hint_email">\@</string>
    <string name="hint_password">*</string>
    <string name="hint_password_confirm">**</string>
    <string name="fa_send_o"></string>
    <string name="fa_close"></string>
    <string name="fa_edit"></string>
    <string name="fa_facebook_square"></string>
    <string name="fa_google_plus_square"></string>
    <string name="fa_envelope_square"></string>
    <string name="fa_plus"></string>
    <string name="fa_facebook"></string>
    <string name="fa_google_plus"></string>
    <string name="fa_envelope_o"></string>
    <string name="fa_plus_square_o"></string>
    <string name="label_sign_up_with_email">Sign up with email</string>
    <string name="font_theme">fonts/desyrel.ttf</string>
    <string name="font_base">fonts/Quicksand-Regular.otf</string>
    <string name="hint_picture_title">Title(optional)</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_upload">Upload</string>
    <string name="label_edit">Edit</string>
    <string name="label_from">from</string>
    <string name="label_untitled">Untitled</string>
    <string name="message_uploading_picture">Now uploading your picture. Please wait a moment!</string>
    <string name="label_confirm">OK</string>
    <string name="message_upload_start">Uploading picture...</string>
    <string name="message_sending_picture">Sending picture...</string>
    <string name="message_send_complete">Your picture was sent successfully!</string>
    <string name="message_send_fail">Failed to upload picture</string>
    <string name="title_activity_picture_view">Picture View</string>
    <string name="label_show_full_image">Click to see full picture</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="error_email_format">Please enter a valid email</string>
    <string name="error_password_length">The password must have a length of %1$d to %2$d characters</string>
    <string name="error_password_confirm">Your password and confirm password do not match</string>
    <string name="error_network">Can\'t connect to server. Please try again later.</string>
    <string name="message_default_progress">Please wait...</string>
    <string name="error_default">An unexpected error occurred. Please try again later.</string>
    <string name="label_send">Send</string>
    <string name="message_picture_download_start">Downloading image...</string>
    <string name="message_picture_download_complete">Download complete</string>
    <string name="confirm_delete">Are you sure you want to delete this picture?\nYou can\'t see this picture again.</string>
    <string name="confirm_log_out">Are you sure you want to log out?</string>
    <string name="label_ok">OK</string>
    <string name="message_press_back_again">Press back again to leave</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_unknown">Unknown</string>
    <string name="message_send_count">%d people received this picture, but there is no location data.</string>
    <string name="label_close">Close</string>
    <plurals name="message_send_count_plural">
        <item quantity="one">%d person received this picture.</item>
        <item quantity="other">%d people received this picture.</item>
    </plurals>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="message_empty_list">You don\'t have any pictures.\nHow about taking and sending a picture first?</string>
    <string name="format_uploader_name">by  %s</string>
    <string name="label_by">by</string>


    <string-array name="main_drawer_menu">
        <item>Settings</item>
        <!--<item>Log out</item>-->
    </string-array>
    <string name="title_activity_discover">DiscoverActivity</string>
    <string name="message_picture_deleted">Picture deleted</string>
    <string name="confirm_close_dialog">Are you sure you want to close this dialog?</string>
    <string name="title_activity_single_picture_view">SinglePictureViewActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="message_share">Butterfly</string>

</resources>
