<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_100">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <me.jiho.butterfly.view.ThemeFontTextView
            android:drawableTop="@drawable/ic_sent_48"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_sign_up"
            android:layout_margin="@dimen/margin_2"
            />
        <me.jiho.butterfly.view.BaseFontEditText
            android:id="@+id/signup_et_email"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_width="@dimen/span_6"
            android:layout_height="@dimen/span_1"
            android:background="@null"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            />
        <me.jiho.butterfly.view.BaseFontEditText
            android:id="@+id/signup_et_password"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_width="@dimen/span_6"
            android:layout_height="@dimen/span_1"
            android:background="@null"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:singleLine="true"
            />
        <me.jiho.butterfly.view.BaseFontEditText
            android:id="@+id/signup_et_password_confirm"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_width="@dimen/span_6"
            android:layout_height="@dimen/span_1"
            android:background="@null"
            android:hint="@string/hint_password_confirm"
            android:inputType="textPassword"
            android:singleLine="true"
            />
        <ImageButton
            android:id="@+id/signup_btn_submit"
            style="?android:borderlessButtonStyle"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_width="@dimen/span_1"
            android:layout_height="@dimen/span_1"
            android:src="@drawable/ic_done_black_24dp"
            />


    </LinearLayout>


</RelativeLayout>
