<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/white"
    tools:context="co.bttrfly.auth.AuthActivity$PlaceholderFragment">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">



        <LinearLayout
            android:id="@+id/auth_ll_login_buttons"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_centerInParent="true"
            >

            <ImageView
                android:id="@+id/auth_iv_logo"
                android:layout_width="@dimen/logo_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo"
                />


            <LinearLayout
                android:layout_margin="@dimen/margin_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <co.bttrfly.view.CustomFacebookLoginButton
                    xmlns:fb="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/auth_btn_facebook_login"
                    style="?android:borderlessButtonStyle"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="@dimen/span_1"
                    android:layout_height="@dimen/span_1"
                    fb:login_text="@string/fa_facebook"
                    fb:logout_text="@string/fa_facebook"


                    />

                <co.bttrfly.view.FAIconButton
                    style="?android:borderlessButtonStyle"
                    android:text="@string/fa_google_plus"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="@dimen/span_1"
                    android:layout_height="@dimen/span_1"
                    android:visibility="gone"/>

                <co.bttrfly.view.FAIconButton
                    android:id="@+id/auth_btn_email_login"
                    style="?android:borderlessButtonStyle"
                    android:text="@string/fa_envelope_o"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="@dimen/span_1"
                    android:layout_height="@dimen/span_1" />


            </LinearLayout>
            <co.bttrfly.view.BaseFontButton
                android:id="@+id/auth_btn_sign_up"

                android:layout_gravity="center_horizontal"
                android:text="@string/label_sign_up_with_email"
                android:textColor="@android:color/black"
                android:alpha=".54"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="?android:borderlessButtonStyle" />
        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>
