<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/white"
    tools:context="co.bttrfly.auth.AuthActivity$PlaceholderFragment">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">



        <LinearLayout
            android:id="@+id/auth_ll_login_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            >
            <co.bttrfly.view.ThemeFontTextView
                android:drawableTop="@drawable/ic_sent_48"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/label_sign_in"
                android:layout_margin="@dimen/margin_2"
                />
            <co.bttrfly.view.BaseFontEditText
                android:id="@+id/auth_et_email"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_width="@dimen/span_6"
                android:layout_height="@dimen/span_1"
                android:background="@null"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                />
            <co.bttrfly.view.BaseFontEditText
                android:id="@+id/auth_et_password"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_width="@dimen/span_6"
                android:layout_height="@dimen/span_1"
                android:background="@null"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:singleLine="true"
                />

            <ImageButton
                android:id="@+id/auth_btn_submit"
                style="?android:borderlessButtonStyle"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_width="@dimen/span_1"
                android:layout_height="@dimen/span_1"
                android:src="@drawable/ic_done_black_24dp"
                />
            <ImageButton
                android:id="@+id/auth_btn_cancel"
                style="?android:borderlessButtonStyle"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_width="@dimen/span_1"
                android:layout_height="@dimen/span_1"
                android:src="@drawable/ic_arrow_back_grey600_24dp"
                />



        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
